--- a/styles/style.css
+++ b/styles/style.css
@@ -2,17 +2,20 @@
     margin: 10px 0px 0px 0px;
     padding: 0px;
     background-color: grey;
-    
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
-h1{
+h1, p{
     text-align: center;
     color: white;
     text-shadow: 1px 1px 5px blue, 0 0 5px green, 0 0 5px skyblue;
 }
+
 p{
     text-transform: capitalize;
-    text-align: center;
-    color: white;
     font-size: 20px;
-    text-shadow: 1px 1px 5px blue, 0 0 5px green, 0 0 5px skyblue;
+}
+h3{
+    text-align: center;
+    font-size: 20px;
+    color: blue;
 }
