--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
     margin: 10px 0px 0px 0px;
     padding: 0px;
     background-color: grey;
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 h1, p{
     text-align: center;
@@ -19,4 +18,5 @@ h3{
     font-size: 20px;
     color: blue;
     font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
