--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,52 @@
-*{
+* {
     margin: 10px 0px 0px 0px;
     padding: 0px;
-    background-color: grey;
 }
-h1, p{
+
+.background {
+    margin: auto;
+    width: 30%;
+    padding: 10px;
+    border: 3px solid skyblue;
+    background-image: linear-gradient(45deg ,#fff, transparent), url('https://plus.unsplash.com/premium_photo-1682140999442-e9e2a5f55be6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y29kaW5nfGVufDB8fDB8fHww');
+    background-repeat: no-repeat;
+    /* object-fit: cover; */
+    background-size: cover;
+    background-position: center;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 88%);
+}
+
+h1,
+p {
     text-align: center;
     color: white;
     text-shadow: 1px 1px 5px blue, 0 0 5px green, 0 0 5px skyblue;
 }
 
-p{
+p {
     text-transform: capitalize;
     font-size: 20px;
 }
-h3{
+
+h3 {
     text-align: center;
     font-size: 20px;
     color: blue;
     font-style: italic;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: "Roboto", sans-serif
+}
+
+.btn {
+    text-align: center;
+}
+
+#text {
+    width: 100px;
+    background-color: black;
+    color: white;
+    padding: 6px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: auto;
+    text-align: center;
 }
